# explainpolysvm

./: .gitignore  CITATION.cff  LICENSE  README.html  README.md  README.rst  __main__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  todo.txt
.github/: CONTRIBUTING.md
.github/workflows/: python-package.yml  python-publish.yml
docs/source/: 01_theory.rst  conf.py  explainpolysvm.rst  index.rst  modules.rst
examples/: feature_importance_example.ipynb
examples/2d_rings/: feature_importance_2d.ipynb  feature_importance_example.ipynb
examples/2d_visualization/: visualize_feature_importance.ipynb
examples/3d_tube/: feature_importance_3d.ipynb
examples/3d_tubes/: feature_importance_3d.ipynb
examples/3d_tubes/images/: degree_importance_single_3d.eps  feature_importance_3d.eps  feature_importance_signed_3d.eps  feature_importance_single_3d.eps  feature_selection_3d.eps  training_data_3d.eps
examples/h_statistics/: h_stat_strong.ipynb  h_stat_weak.ipynb
examples/svr/: 2d_svr.ipynb
examples/wisconsin_breast_cancer_dataset/: compare_expsvm_polyfeatures.ipynb  compare_expsvm_with_linear_svm.ipynb  compare_expsvm_with_linear_svm_perm_importance.ipynb  compare_expsvm_with_polyfeatures_svm.ipynb  feature_importance_wbc.ipynb  interaction_importance_wbc.ipynb
examples/wisconsin_breast_cancer_dataset/images/: degree_importance_single_negative_wbcd.eps  feature_importance_boxplot_contribution.eps  feature_importance_signed_wbcd.eps  feature_importance_single_negative_wbcd.eps  feature_importance_single_positive_wbcd.eps  feature_importance_wbcd.eps
explain_poly_svm/: expsvm.py
explainpolysvm/: __init__.py  expsvm.py
explainpolysvm/plot/: __init__.py  _bar.py  _waterfall.py
expsvm/: explain_svm.py  test_expsvm.py  todo.txt
src/explainpolysvm/: expsvm.py
src/explainpolysvm/plot/: _waterfall.py
tests/: __init__.py  conftest.py  context.py  test_expsvm.py  test_plot.py
