[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "explainpolysvm"
version = "1.1.1"
description = "Module for Global and Local explanations and feature selection for Support Vector Machines trained with polynomial kernels."
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    {name = "Rikard Vinge", email = "research@rikardvinge.se"},
]
dependencies = [
    "numpy>=1.24.4",
    "scikit-learn>=1.0.2",
    "matplotlib"
]
license = { text = "BSD-3-Clause" }
keywords=["feature importance", "support vector machine", "svm", "feature selection", "polynomial kernel", "xai", "interaction importance"]
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        ]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.urls]
Repository = "https://github.com/rikardvinge/explainpolysvm.git"
Issues = "https://github.com/rikardvinge/explainpolysvm/issues"

[tool.hatch.build]
sources = ["src"]
dev-mode-dirs = ["src"]
include = ["LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/explainpolysvm"]